--- a/index.html
+++ b/index.html
@@ -4,87 +4,74 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!--STYLESHEETS-->
-    <!--Google Fonts-->
-
     <!--Font Awesome Icons-->
     <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
-    <!--Bootstrap4-->
+    <!--Bootstrap_4-->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    <style>
-        html {
-            font-size: 23px;
-        }
-
-        /*Navigation Bar*/
-/*
-        .nav_bar {
-            display: flex;
-            flex-direction: row;
-            justify-content: flex-end;
-        }
-
-        nav li {
-            border-bottom: yellowgreen 1.5px solid;
-            margin: 10px;
-            list-style: none;
-        }
-*/
-
-        /*Main Content*/
-
-        h1.title {
-            font-size: 3em;
-            text-align: center;
-        }
-
-        .section {
-            text-align: center;
-        }
-
-        div#main {
-            background-color:white;
-        }
-
-        .ve {
-            color:yellowgreen;
-        }
-    </style>
+    <!--Google Fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Comfortaa|Pacifico" rel="stylesheet">
+    <!--Our Style-->
+    <link href="indexstylesheet.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
-    <!--Navbar-->
-    <nav> 
-      <div class="container-fluid">
-       <ul class="nav navbar-default">
-        <li>Recommend Something</li>
-        <li>Blog</li>
-        <li>Events</li>
-        <li class="about">About</li>
-        </ul>
-        </div>
-    </nav>
-    <!--Mainpage-->
-    <div class="jumbotron text-center">
-    <h1>Cra<span class="ve">Ve</span> London</h1>
-    <p class="lead">No need for hanger; Sate your cravings and your conscientious with our tasty AF <span class="ve">vegan</span> alternatives here in London </p>
-   <div id="main" class="container-fluid section">
-        <div class="menu">
-            <button> <a href=""> Sweet Treats</a> </button>
-            <button> <a href=""> Pizza</a></button>
-            <button> <a href=""> Burgers</a></button>
-            <button> <a href=""> World Foods</a></button>
-            <button> <a href=""> Surprise Me</a></button>
-        </div>
+    <!--navBar-->
+    <div class="ourContainer">
+        <nav>
+            <ul class="navBar_main">
+                <li>Recommend a Spot</li>
+                <li>Blog</li>
+                <li>Events</li>
+                <li>Other Locations</li>
+            </ul>
+            <ul class="about_social">
+                <li>About</li>
+            </ul>
+        </nav>
+        <!--mainPage-->
+        <header class="align-items-center">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12">
+                        <h1 class="title">Cra<span class="ve">Ve</span></h1>
+                    </div>
+                    <div class="col-12">
+                        <h3 class="location">-london-</h3>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <section class="align-items-center">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-sm-12 offset-lg-3 col-lg-6">
+                        <p class="description">Stop the <span class="hangryRed">hanger</span> and <span class="treat">treat yourself!</span><br/> Sate your cravings and your conscience with our tasty AF <span class="ve">vegan</span> versions of the non-vegan food you love, right here in London.</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6">
+                        <button type="button" class="col-lg-2"><a href=""> Sweet Treats</a></button>
+                        <button type="button" class="col-lg-2"><a href=""> Fast Food</a></button>
+                        <button type="button" class="col-lg-2"><a href=""> World Food</a></button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!--
+            <div class="row align-items-center">
+                <button type="button" class="btn offset-lg-5 col-lg-2"><a href=""> Surprise Me!</a></button>
+            </div>
+-->
+
     </div>
-     </div>
-    
     <!--Footer-->
-    <footer class="footer foot_style text-center">
-        <div class="container-fluid">
-            <p>Made with __ by Hannah + Michelle // Powered by CodeFirst:Girls_Paddington </p>
-        </div>
-    </footer>
+    <div class="text-center">
+        <footer>
+            <p>Made with __ by Hannah + Michelle // Powered by CodeFirst:Girls_Paddington</p>
+        </footer>
+    </div>
+
 </body>
 
 </html>
