changed stylings more

--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!--Font Awesome Icons-->
-    <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
-    <!--Bootstrap_4-->
+        <!--Bootstrap_4-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!--Google Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Chewy|Delius+Swash+Caps" rel="stylesheet">
+    <!--Font Awesome Icons-->
+    <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
     <!--Our Style-->
     <link href="indexstylesheet.css" type="text/css" rel="stylesheet">
 </head>
@@ -30,7 +29,7 @@
                 <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Events</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Other Locations</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="About.html">About</a></li>
             </ul>
         </div>
     </nav>
@@ -67,7 +66,7 @@
             </div>
         </div>
     </div>
-    <div class="text-center">
+    <div>
         <footer>
             <p>Made with __ by Hannah + Michelle // Powered by CodeFirst:Girls_Paddington</p>
         </footer>
