--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-        <!--Bootstrap_4-->
+    <!--Bootstrap_4-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!--Google Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Chewy|Delius+Swash+Caps" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Roboto+Slab|Delius+Swash+Caps" rel="stylesheet">
     <!--Font Awesome Icons-->
     <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
     <!--Our Style-->
@@ -17,60 +17,77 @@
     <!--navBar-->
 
     <nav class="navbar navbar-expand-sm navbar-light nav-Bg">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-   <div class="leafy_menu_btn">
-       <i class="fas fa-leaf fa-2x"></i>
-   </div> 
-   navigation
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="leafy_menu_btn"><i class="fas fa-leaf fa-3x"></i></span>
   </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto nav_Fnt">
-                <li class="nav-item"><a class="nav-link" href="#">Recommend a Spot</a></li>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item text-nowrap"><a class="nav-link" href="#">Recommend a Spot</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Events</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Other Locations</a></li>
-                <li class="nav-item"><a class="nav-link" href="About.html">About</a></li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle text-nowrap" href="#" id="navbardrop" data-toggle="dropdown">
+        Cra<span class="vegan_ve">Ve</span> World
+      </a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="#">CraVe NYC</a>
+                        <a class="dropdown-item" href="#">CraVe TKY</a>
+                    </div>
+                </li>
+<!--
+                <div>
+                    <li class="nav-item"><a class="nav-link" href="About.html">About</a>
+                        <li class="nav-item">We're very social:</li>
+                        <li class="nav-item"><i class="fab fa-instagram"></i></li>
+                        <li class="nav-item"><i class="fab fa-twitter"></i></li>
+                        <li class="nav-item"><i class="fab fa-facebook"></i></li>
+                </div>
+-->
             </ul>
         </div>
     </nav>
 
     <!--mainPage-->
     <div class="container-fluid ">
-        <div class="container d-flex pt-lg-3 pt-md-0 mx-auto flex-column ">
+        <div class="container d-flex pt-lg-4 pt-md-3 mx-auto flex-column ">
             <header>
-                <div class="container">
+                <div class="container text-center">
                     <div class="row">
-                        <h1 class="title col-md-12 text-center font-weight-normal">Cra<span class="ve font-weight-bold">Ve</span></h1>
+                        <h1 class="title col-md-12 text-center font-weight-normal">Cra<span class="title_ve font-weight-bold">Ve</span></h1>
                     </div>
                     <div class="row">
                         <h3 class="location col-md-12 text-center font-weight-bold">-london-</h3>
                     </div>
                     <div class="row">
-                        <p class="description col-md-12 text-center">"Stop the <span class="hangryRed">Hanger</span> and <span class="treat font-weight-bold">Treat Yourself!</span>"</p>
+                        <p class="description
+                    col-md-12 nopadding_bt ">Stop the <span class="hangryRed">Hanger</span> and <span class="treat font-weight-bold">Treat Yourself!</span></p>
                     </div>
                 </div>
             </header>
-            <main class="container">
+            <main class="container pb-sm-0">
                 <div class="row">
-                    <p class="lead text-center"> Sate your cravings and your conscience with our tasty <span class="ve">vegan</span> versions of the non-vegan food you love, right here in London.</p>
+                    <p class="lead text-center nopadding_bt"> Sate your cravings and your conscience with our tasty <span class="vegan_ve">vegan</span> versions of the non-vegan food you love, right here in London.</p>
                 </div>
             </main>
             <!--Choices-->
-            <div class="container">
-                <a href="#" class="btn btn-primary my-2">Sweet Treats</a>
-                <a href="#" class="btn btn-primary my-2">Fast Food</a>
-                <a href="#" class="btn btn-primary my-2">World Food</a>
-            </div>
-            <div class="container">
-                <a href="#" class="btn btn-primary my-2">Surprise Me!</a>
+            <div class="container-fluid pt-lg-5 pt-md-0 flex-column ">
+                <img src="img/cloud.svg" id="cloud" alt="cloudy cloud">
+                <div>
+                    <a href="#" class="btn my-2 ourButton ">Sweet Treats</a>
+                    <a href="#" class="btn my-2 ourButton ">Fast Food</a>
+                    <a href="#" class="btn my-2 ourButton ">World Food</a>
+                </div>
+                <div>
+                    <a href="#" class="btn my-2 ourButton ">Surprise Me!</a>
+                </div>
             </div>
         </div>
     </div>
-    <div>
-        <footer>
-            <p>Made with __ by Hannah + Michelle // Powered by CodeFirst:Girls_Paddington</p>
-        </footer>
-    </div>
+    <footer>
+        <div class="container-fluid footer">
+            <p class="nopadding_bt">Made with __ by Hannah + Michelle // Powered by CodeFirst:Girls_Paddington</p>
+        </div>
+    </footer>
     <!--    Bootstrap JavaScript CDNs-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
