--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <!--Font Awesome Icons-->
     <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
     <!--Our Stylesheets-->
-    <link href="consistencystylesheet.css" rel="stylesheet" type="text/css">
-    <link href="indexstylesheet.css" type="text/css" rel="stylesheet">
+    <link href="stylesheets/consistencystylesheet.css" rel="stylesheet" type="text/css">
+    <link href="stylesheets/indexstylesheet.css" type="text/css" rel="stylesheet">
 </head>
 
-<body class="text-center backgroundStyle">
+<body class="text-center gradient_bluepink_bkgrnd">
     <!--navBar-->
     <nav class="navbar navbar-expand-sm navbar-light nav-Bg display">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
