fixed cloud and button position issues of index; navigation menu button changed but navbar responsiveness not fixed

--- a/result.html
+++ b/result.html
@@ -11,8 +11,8 @@
     <!--Font Awesome Icons-->
     <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
     <!--Our Stylesheets-->
-    <link href="stylesheets/consistencystylesheet.css" rel="stylesheet" type="text/css">
-    <link href="stylesheets/indexstylesheet.css" type="text/css" rel="stylesheet">
+    <link href="consistencystylesheet.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="resultsstylesheet.css">
 </head>
 
 <body class="gradient_bluepink_bkgrnd">
@@ -20,9 +20,10 @@
     <!--main-->
     <div class="container">
         <h1>Sweet Treats</h1>
+        <h3> Sugar and spice, and nothing that's not nice (well, anything that's not vegan at least). Click below to see all the cake, ice-cream, pasteries and even  </h3>
     </div>
     <div class="container">
-
+    <!--put map here-->
     </div>
     <!--footer-->
 </body>
