--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!--navBar-->
     <nav class="navbar navbar-expand-sm navbar-light nav-Bg display">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span><i class="fas fa-leaf fa-3x" style="color: #82ac2d;"></i></span>
+    <span><i class="fas fa-cloud fa-4x cloudFloat" style="color:white;"></i></span>
   </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
@@ -67,8 +67,12 @@
                 </div>
             </main>
             <!--Choices-->
-            <div class="container-fluid pt-lg-5 pt-md-0 flex-column ">
-                <img src="img/cloud.svg" id="cloud" alt="cloudy cloud">
+            <div class="container parent">
+                <div class="child img-responsive">
+                    <img src="img/cloud.svg" id="cloud" class="d-none d-md-inline-block" alt="a very cloudy cloud">
+                </div>
+            </div>
+            <div class="container pt-lg-5 pt-md-5 flex-column">
                 <div>
                     <a href="#" class="btn my-2 ourButton ">Sweet Treats</a>
                     <a href="#" class="btn my-2 ourButton ">Fast Food</a>
@@ -80,11 +84,13 @@
             </div>
         </div>
     </div>
-    <footer>
-        <div class="container-fluid footer">
+
+    <footer class="container pt-lg-5 pt-sm-5 flex-column">
+        <div class="container pt-lg-4 pt-sm-0 flex-column">
             <p class="nopadding_bt">Made with __ by Hannah + Michelle // Powered by CodeFirst:Girls_Paddington</p>
         </div>
     </footer>
+
     <!--    Bootstrap JavaScript CDNs-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
