--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
 </head>
 
 <body class="text-center gradient_bluepink_bkgrnd">
-    <!--navBar-->
+    <!--navBar button-->
     <nav class="navbar navbar-expand-sm navbar-light nav-Bg display">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span><i class="fas fa-cloud fa-4x cloudFloat" style="color:white;"></i></span>
+    <span><i class="fas fa-cloud fa-4x cloudFloat"></i></span>
   </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <!--navbar Menu-->
+        <div class="collapse navbar-collapse d-inline-flexflex-sm-column flex-wrap" id="navbarNavDropdown">
+            <!--this is the container of the menu and flex parent of the two uls-->
             <ul class="navbar-nav">
-                <li class="nav-item active"><a class="nav-link"><i class="fas fa-home"></i></a></li>
+                <li class="nav-item active"><a class="nav-link"><i class="fas fa-home fa-1x"></i></a></li>
                 <li class="nav-item text-nowrap"><a class="nav-link" href="#">Recommend a Spot</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
                 <li class="nav-item dropdown">
@@ -34,12 +36,15 @@
                         <a class="dropdown-item disabled">CraVe TKY</a>
                     </div>
                 </li>
+            </ul>
+            <ul class="navbar-nav ml-auto p-2 d-inline-flex">
+                <li class="vegan_ve font-weight-bold d-none d-sm-block" title="Well sometimes ;)"><a class="nav-link">We're very social</a></li>
+                <div class="social">
+                    <li><a class="nav-link"><i class="fab fa-instagram whiteIcon"></i></a></li>
+                    <li><a class="nav-link"><i class="fab fa-twitter whiteIcon"></i></a></li>
+                    <li><a class="nav-link"><i class="fab fa-facebook whiteIcon"></i></a></li>
+                </div>
                 <li class="nav-item"><a class="nav-link" href="About.html">About</a></li>
-                <li class="nav-item text-nowrap vegan_ve font-weight-bold"><a class="nav-link">We're very social</a></li>
-
-                <li class="nav-item"><a class="nav-link"><i class="fab fa-instagram"></i></a></li>
-                <li class="nav-item"><a class="nav-link"><i class="fab fa-twitter"></i></a></li>
-                <li class="nav-item"><a class="nav-link"><i class="fab fa-facebook"></i></a></li>
             </ul>
         </div>
     </nav>
@@ -85,9 +90,9 @@
         </div>
     </div>
 
-    <footer class="container pt-lg-5 pt-sm-5 flex-column">
-        <div class="container pt-lg-4 pt-sm-0 flex-column">
-            <p class="nopadding_bt">Made with __ by Hannah + Michelle // Powered by CodeFirst:Girls_Paddington</p>
+    <footer>
+        <div class="container pt-lg-3 pt-sm-0 flex-column">
+           Made with <i class="far fa-heart"></i> by Hannah + Michelle // Powered by CodeFirst:Girls_Paddington
         </div>
     </footer>
 
