started work on results page for Sweet Treats, to be used as template for other results pages

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <!--Font Awesome Icons-->
     <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
     <!--Our Stylesheets-->
-    <link href="consistencystylesheet.css" rel="stylesheet" type="text/css">
-    <link href="indexstylesheet.css" type="text/css" rel="stylesheet">
+    <link href="consistencystylesheet.css" rel="stylesheet" type="text/css"><link href="indexstylesheet.css" type="text/css" rel="stylesheet">
 </head>
 
 <body class="text-center gradient_bluepink_bkgrnd">
@@ -47,7 +46,7 @@
     </nav>
     <!--mainPage-->
     <div class="container-fluid" id="parentcontainer">
-        <div class="row no-gutters">
+        <div class="row">
             <div class="col-12 container-fluid">
                 <div class=" d-flex pt-lg-2 pt-md-2 mx-auto flex-column">
                     <header>
@@ -77,7 +76,7 @@
                     </div>
                     <div class="container pt-lg-5 pt-md-5 mb-md-5 flex-column">
                         <div>
-                            <a href="#" class="btn my-2 ourButton ">Sweet Treats</a>
+                            <a href="SweetTreats.html" class="btn my-2 ourButton ">Sweet Treats</a>
                             <a href="#" class="btn my-2 ourButton ">Fast Food</a>
                             <a href="#" class="btn my-2 ourButton ">World Food</a>
                         </div>
