Started to create a results page template; minor style modifications to index and consistency stylesheets

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     </header>
                     <main class="container pb-xs-3 pb-md-1">
                         <div class="row">
-                            <p class="lead text-center nopadding_bt"> Sate your cravings and your conscience with our tasty <span class="lead_ve font-weight-bold">vegan</span> versions of the non-vegan food you love, right here in London.</p>
+                            <p class="lead nopadding_bt"> Sate your cravings and your conscience with our tasty <span class="lead_ve font-weight-bold">vegan</span> versions of the non-vegan food you love, right here in London.</p>
                         </div>
                     </main>
                     <!--Choices-->
