--- a/SweetTreats.html
+++ b/SweetTreats.html
@@ -7,7 +7,8 @@
     <!--Bootstrap_4-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!--Google Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Roboto+Slab|Delius+Swash+Caps" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Delius+Swash+Caps|Pacifico" rel="stylesheet">
+    <script src="//use.edgefonts.net/damion.js"></script>
     <!--Font Awesome Icons-->
     <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
     <!--Our Stylesheets-->
@@ -22,7 +23,6 @@
   </button>
         <!--navbar Menu-->
         <div class="collapse navbar-collapse d-inline-flexflex-sm-column flex-wrap" id="navbarNavDropdown">
-            <!--this is the container of the menu and flex parent of the two uls-->
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link" href="index.html"><i class="fas fa-home fa-1x"></i></a></li>
                 <li class="nav-item text-nowrap"><a class="nav-link" href="#">Suggest a Spot  <i class="fas fa-map-marker-alt" ></i></a></li>
@@ -48,21 +48,17 @@
         </div>
     </nav>
     <!--main-->
-    <div class="container-fluid p-0">
-        <div class="row">
-            <div class="col-lg-10 col-sm-12" id="results">
-                <div class="container m-2 bg-light border rounded shadow">
-                    <h1>Sweet Treats</h1>
-                    <h4> Sugar and spice, and nothing that's not nice (well, anything that's not vegan at least)</h4>
-                    <p>Click below to see all the cake, ice-cream, and pasteries London has to offer</p>
-                </div>
-                <div class="container m-2 bg-light border rounded">
-                    Map Map Map Heeeeew
-                </div>
+    <div class="container-fluid">
+        <div class="row pt-3">
+            <div class="col-lg-9 col-md-12" id="results">
+                <div class="container bg-light border rounded shadow my-2 text-center" >
+                       <h1 class="title pt-lg-4">Sweet Treats</h1>
+                        <h4 class="lead"> <span class="treat">Sugar and Spice, and nothing that's not nice </span> (well, anything that's not vegan at least)</h4>
+                        <p>Click below to see all the cake, ice-cream, and pasteries London has to offer</p></div>
+                <div class="container bg-light border rounded shadow my-2"> Map </div>
             </div>
-            <div class="col-lg-2 col-sm-12" id="sidebar">
-                We recommend Sign up to newsletter
-            </div>
+            <div class="col-lg-3 col-md-12 " id="sidebar">
+                Sidebar </div>
         </div>
     </div>
 
