moved a bunch of css styling for results page sidebar (i.e newsletter and recommendation) to consistenystylesheet.css to prevent css duplication in other similar result pages

--- a/SweetTreats.html
+++ b/SweetTreats.html
@@ -14,7 +14,7 @@
     <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
     <!--Our Stylesheets-->
     <link href="consistencystylesheet.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="STresultsstylesheet.css">
+    <link href="STstylesheet.css" rel="stylesheet" type="text/css">
 </head>
 
 <body class="gradient_bluepink_bkgrnd">
