moved stylesheets to folder to organise things a little more; created new results pages based on sweet treats page; fixed weird purple active hilight problem found in previous commit

--- a/FastFood.html
+++ b/FastFood.html
@@ -8,13 +8,13 @@
     <!--Bootstrap_4-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!--Google Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Delius+Swash+Caps|Pacifico|Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Delius+Swash+Caps|Racing+Sans+One|Raleway" rel="stylesheet">
     <script src="//use.edgefonts.net/damion.js"></script>
     <!--Font Awesome Icons-->
     <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
     <!--Our Stylesheets-->
     <link href="consistencystylesheet.css" rel="stylesheet" type="text/css">
-    <link href="STstylesheet.css" rel="stylesheet" type="text/css">
+    <link href="FFstylesheet.css" rel="stylesheet" type="text/css">
 </head>
 
 <body class="gradient_bluepink_bkgrnd">
@@ -31,8 +31,8 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="menu" data-toggle="dropdown">Menu <i class="fas fa-utensils"></i></a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item nav-link active">Sweet Treats</a>
-                        <a class="dropdown-item nav-link" href="FastFood.html">Fast Food</a>
+                        <a class="dropdown-item nav-link" href="SweetTreats.html" >Sweet Treats</a>
+                        <a class="dropdown-item nav-link active">Fast Food</a>
                         <a class="dropdown-item nav-link" href="WorldFood.html">World Food</a>
                     </div>
                 </li>
@@ -52,9 +52,9 @@
         <div class="row pt-3">
             <div class="col-lg-9 col-md-12" id="mainpage">
                 <div class="container bg-light border rounded shadow my-2 text-center">
-                    <h1 class="title pt-lg-4">Sweet Treats</h1>
-                    <h4 class="description">Sugar and Spice, and nothing that's not nice (well, anything that's not vegan at least)</h4>
-                    <p>Click below to see all the cake, ice-cream, and pasteries London has to offer</p>
+                    <h1 class="title pt-lg-4">Fast Food</h1>
+                    <h4 class="description"> Who says the vegans only munched to limp lettuce leaves?! Take a bite</h4>
+                    <p class="changme">Click below to see all the cake, ice-cream, and pasteries London has to offer</p>
                 </div>
                 <div class="container bg-light border rounded shadow my-2"> Map </div>
             </div>
