--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                     <div class="container pt-lg-5 pt-md-5 mb-md-5 flex-column">
                         <div>
                             <a href="SweetTreats.html" class="btn my-2 ourButton ">Sweet Treats</a>
-                            <a href="#" class="btn my-2 ourButton">Fast Food</a>
-                            <a href="#" class="btn my-2 ourButton">World Food</a>
+                            <a href="FastFood.html" class="btn my-2 ourButton">Fast Food</a>
+                            <a href="WorldFood.html" class="btn my-2 ourButton">World Food</a>
                         </div>
                         <div>
                             <a href="#" class="btn my-2 ourButton ">Surprise Me!</a>
