ignore last commit (really need to learn how to use amend), this commit has the correct stylsheet links on the results page unlike the last commit

--- a/WorldFood.html
+++ b/WorldFood.html
@@ -54,15 +54,12 @@
                 <div class="container bg-light border rounded shadow my-2 text-center">
                     <h1 class="title pt-5">World Food</h1>
                     <h4 class="description"> The vegan diet can be traced all the way back to 600BCE India, but today it has been enthuastically adopted by cultural cusines all over the world.</h4>
-                    <p class="changme">Click below to see all the cake, ice-cream, and pasteries London has to offer</p>
+  <p class="changme">Click below to see all the cake, ice-cream, and pasteries London has to offer</p>
                 </div>
-                <div class="container bg-light border rounded shadow my-2">
-                    <div style="display:inline-block; overflow:hidden;">
-                        <iframe class="custom-google-map" style="position:relative; top:-50px; border:none;" src="https://www.google.com/maps/d/embed?mid=1GQJrUt8mkC4FveK_bouP3_GyNxTMZpvN"></iframe>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-12 " id="sidebar">
-                    <div class="container my-2 rounded border RecommendStyle" id="recommended">
+                <div class="container bg-light border rounded shadow my-2"> Map </div>
+            </div>
+            <div class="col-lg-3 col-md-12 " id="sidebar">
+                <div class="container my-2 rounded border RecommendStyle" id="recommended">
                         <h4 class="text-center pt-2 font-weight-bold sidebarHeader mb-1">Star Eat of the Week <i class="far fa-star fa-xs fa-spin"></i></h4>
                         <h6 class="card-subtitle text-center mb-1">As chosen by Hannah</h6>
                         <div class="row no-gutters align-items-center">
