--- a/FastFood.html
+++ b/FastFood.html
@@ -13,8 +13,7 @@
     <!--Font Awesome Icons-->
     <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
     <!--Our Stylesheets-->
-    <link href="consistencystylesheet.css" rel="stylesheet" type="text/css">
-    <link href="FFstylesheet.css" rel="stylesheet" type="text/css">
+    <link href="./stylesheets/consistencystylesheet.css" rel="stylesheet" type="text/css"><link href="./stylesheets/FFstylesheet.css" rel="stylesheet" type="text/css">
 </head>
 
 <body class="gradient_bluepink_bkgrnd">
