--- a/SweetTreats.html
+++ b/SweetTreats.html
@@ -146,7 +146,7 @@
         </div>
     </div>
     <footer class="text-center">
-        <div class="container-fluid"> <span class="footerStyle font-weight-bold">Made with <i class="fas fa-leaf fa-lg" style="color:#668427"></i>  by Hannah + Michelle // Made possible with <a class="img-responsive" href="https://www.codefirstgirls.org.uk/free-community-courses.html" target="_blank"><img src="img/cfg_logo.png" alt="CodeFirst:Girls" id="cfg_logo"></a></span>
+        <div class="container-fluid"> <span class="footerStyle font-weight-bold">Made with <i class="fas fa-leaf fa-lg" style="color:#668427"></i>  by Hannah + Michelle + Seraphina // Made possible with <a class="img-responsive" href="https://www.codefirstgirls.org.uk/free-community-courses.html" target="_blank"><img src="img/cfg_logo.png" alt="CodeFirst:Girls" id="cfg_logo"></a></span>
         </div>
     </footer>
     <!--    Bootstrap JavaScript CDNs-->
