--- a/About.html
+++ b/About.html
@@ -1,15 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="aboutstylesheet.css">
+    <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
     <title>About</title>
 </head>
 <body>
-   <h1>About</h1> 
-   Cravings is your one-stop destination for all of your plant-based desires. 
-   Whether you are vegan, v-curious, or just looking to reduce your meat intake, we're here to make sure you never have to compromise your cravings. 
-   Social Media
-   Email us 
-   
+ <div class="container">
+  <div class="row info_1">
+          <div class="col-lg-4">
+            <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+            <h2>About CraVe</h2>
+            <p>Cravings is your one-stop destination for all of your plant-based desires. 
+   Whether you are vegan, v-curious, or just looking to reduce your meat intake, we're here to make sure you never have to compromise your cravings.</p>
+          </div>
+          <div class="col-lg-4">
+            <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+            <h2>About Us</h2>
+             <p><center>
+                 <details>
+							<summary>Hannah</summary>
+							<img class="rounded-circle img-fluid" src="images/hannah%20(1).jpg" alt="Hannah">
+							<p>About Hannah</p>
+					</details>
+                </center>
+                <center>
+                   <details>
+							<summary>Michelle</summary>
+							<img class="rounded-circle img-fluid" src="Images/Mich.jpg" alt="Michelle">
+							<p>About Michelle</p>
+					</details>
+         </center></p>
+          </div>
+          <div class="col-lg-4">
+            <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+            <h2>Feedback</h2>
+            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+              <center><a class="btn btn-secondary" href="#" role="button">Feedback Form <i class="fas fa-long-arrow-alt-right"></i></a></center>
+          </div>
+        </div>
+    </div>
 </body>
 </html>
