--- a/FastFood.html
+++ b/FastFood.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
+<html lang="en"><head>
     <meta charset="UTF-8">
-    <title>Document</title>
-    <meta charset="utf-8">
+    <title>Fast Food</title>
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <!--Bootstrap_4-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!--Google Fonts-->
@@ -13,15 +14,14 @@
     <!--Font Awesome Icons-->
     <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
     <!--Our Stylesheets-->
-    <link href="./stylesheets/consistencystylesheet.css" rel="stylesheet" type="text/css"><link href="./stylesheets/FFstylesheet.css" rel="stylesheet" type="text/css">
+    <link href="./stylesheets/consistencystylesheet.css" rel="stylesheet" type="text/css">
+    <link href="./stylesheets/FFstylesheet.css" rel="stylesheet" type="text/css">
 </head>
 
 <body class="gradient_bluepink_bkgrnd">
-    <!--navBar button-->
     <nav class="text-center navbar navbar-expand-md navbar-light navStyling display">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"><span><i class="fas fa-cloud fa-4x cloudFloat"></i></span>
   </button>
-        <!--navbar Menu-->
         <div class="collapse navbar-collapse d-inline-flexflex-sm-column flex-wrap" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link" href="index.html"><i class="fas fa-home fa-1x"></i></a></li>
@@ -30,7 +30,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="menu" data-toggle="dropdown">Menu <i class="fas fa-utensils"></i></a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item nav-link" href="SweetTreats.html" >Sweet Treats</a>
+                        <a class="dropdown-item nav-link" href="SweetTreats.html">Sweet Treats</a>
                         <a class="dropdown-item nav-link active">Fast Food</a>
                         <a class="dropdown-item nav-link" href="WorldFood.html">World Food</a>
                     </div>
