--- a/FastFood.html
+++ b/FastFood.html
@@ -96,13 +96,11 @@
 
                             <div class="pParent">
                                 <p class="text-justify card-text mb-1 pEmph">
-                                    <!--World Limit 27, put any over flowing text below Delete me once changed.-->
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore aliquam officia deleniti deserunt quasi a nesciunt fugiat vero blanditiis, ab similique iure, porro maiores. Magni, aperiam, optio.</p>
+                                    Fried chicken is probably the last thing you’d expect to eat as a vegan. But thanks to Temple of Seitan (or less controversially known as Temple of Hackney) your finger-licking fix = sorted.</p>
                                 <p class="text-right mb-1"><a data-toggle="collapse" href="#readMoreLess" aria-expanded="false" aria-controls="readMoreLess">
     Read More/Less... </a></p>
                                 <div class="collapse pParent" id="readMoreLess">
-                                    <!--Put any text that doesn't fit above here-->
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum quod consequatur quibusdam iure eius necessitatibus officia asperiores ut debitis harum, laborum distinctio, fugit impedit, odio magni explicabo? Tempore, culpa, similique.</p>
+                                    <p>Tucked away in a corner of Hackney, next to a butchers oddly enough, is perhaps one the most well-known Vegan spots in London. Temple of Seitan has been serving up deep-fried, plant-based goodness to vegans and non-vegans alike since it first opened its doors in January 2017. Since then, the world’s first vegan fried chicken shop has gained a cult-following. With burgers, meal deals and a killer pot of mac & cheese, there really is something for everything. Get yourself down there and see firsthand why omnis are turning Seitanic.</p>
                                 </div>
                             </div>
                         </div>
